Fix scroll arrow overflow

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -93,7 +93,7 @@
 
         @include respond(medium) {
             height: 3rem;
-            width: 4rem;
+            width: 2rem;
         }
 
         & path {
