--- a/src/sass/components/_palettecontrols.scss
+++ b/src/sass/components/_palettecontrols.scss
@@ -2,7 +2,7 @@
     @include flex-column-center;
     @include section-styles;
     padding: 7rem 0 5rem 0;
-    margin-bottom: 6rem;
+    margin-bottom: 3rem;
     background: $color-primary-dark;
     width: 100%;
     height: 100%;
